# mathhook

./: .env.example  .gitignore  ANALYSIS_SUMMARY.txt  ARCHITECTURE_REFERENCE.md  BATCH_2.1_COMPLETION_REPORT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FIX_SUMMARY.md  INTEGRATION_TESTS_ORCHESTRATION_SPEC.md  LICENSE-APACHE  LICENSE-MIT  MATHHOOK_COMPREHENSIVE_ANALYSIS.md  MATHHOOK_MATHEMATICAL_SYSTEM_PRESENTATION.md  Makefile  NONCOMMUTATIVE_ALGEBRA.md  ORCHESTRATOR_QUICKSTART.md  README.md  RELEASING.md  SLOW_TESTS_ROOT_CAUSE_ANALYSIS.md  SYMBOLICA_ANALYSIS.md  SYMBOLICA_KEY_INSIGHTS.md  SYMBOLICA_README.md  USAGE.md  WAVE4_SUMMARY.md  analyze_parsing_cases.rs  analyze_slow_tests.md  debug_bulk  debug_cos_special_values.rs  debug_implicit  debug_pattern_matching.rs  debug_solver  debug_solver.rs  deny.toml  docker-compose.yml  dump_all.lalrpop  enhanced_json_fix.py  final_test  fix_rational_json.py  parser_test_cases.json  (+39 more)
crates/mathhook/: Cargo.toml  README.md
crates/mathhook-benchmarks/: Cargo.toml  README.md
crates/mathhook-benchmarks/baselines/: schema.json
crates/mathhook-benchmarks/benches/: bindings_macro_overhead.rs  calculus_benchmarks.rs  comprehensive_performance_suite.rs  core_performance.rs  derivatives_educational_mode.rs  derivatives_fast_mode.rs  educational_benchmarks.rs  fast_mode_verify.rs  function_evaluation_benchmarks.rs  gamma_functions_benchmarks.rs  mathhook_iq_test_suite.rs  multivariate_gcd_bench.rs  parsing_benchmarks.rs  pde_benchmarks.rs  performance_consistency.rs  polynomial_benchmarks.rs  realistic_cas_benchmarks.rs  simd_performance_analysis.rs  simplification_benchmarks.rs  solving_benchmarks.rs  solving_benchmarks.rs.bak  symbolica_challenge.rs
crates/mathhook-benchmarks/ci/: compare_to_baseline.sh  run_benchmarks.sh
crates/mathhook-benchmarks/results/: .gitkeep
crates/mathhook-benchmarks/scripts/: migrate_to_new_structure.sh  update_baseline.sh
crates/mathhook-benchmarks/src/: lib.rs
crates/mathhook-benchmarks/tests/: gcd_cases.rs  gcd_symbolica_cases.rs  memory_optimization_verification.rs  memory_size_check.rs  performance_expression_analysis.rs  performance_memory_optimization.rs  performance_ops_demonstration.rs  performance_speed_target.rs  performance_verification.rs  quick_memory_check.rs  symbolica_domination_suite.rs
crates/mathhook-core/: Cargo.toml  VERSION_1_ROADMAP_BINDINGS_AWARE.md  VERSION_1_ROADMAP_MACRO_FIRST.md  VERSION_1_ROADMAP_WITH_STEP_BY_STEP.md
crates/mathhook-core/examples/: noncommutative_algebra_examples.rs  ode_educational_demo.rs  polynomial_division_usage.rs  test_both_vars.rs  test_common_factor.rs  test_composition.rs  test_expr.rs  test_find_vars.rs  test_gcd_debug.rs  test_gcd_trace.rs  test_int_direct.rs  test_intpoly_debug.rs  test_reduce_debug.rs  test_reduce_debug2.rs  verify_fast_derivatives.rs
crates/mathhook-core/src/: algebra.rs  bindings_prelude.rs  calculus.rs  core.rs  educational.rs  error.rs  formatter.rs  functions.rs  lib.rs  main.rs  matrices.rs  matrix.rs  parser.rs  serialize.rs  simplify.rs  solvers.rs
crates/mathhook-core/tests/: abs_tests.rs  algebra.rs  algebra_advanced_functions.rs  algebra_arithmetic.rs  algebra_calculus_operations.rs  algebra_equation_solvers.rs  algebra_expansion.rs  algebra_matrix_operations.rs  algebra_powers.rs  algebra_rational.rs  algebraic_manipulation_education_test.rs  analyze_parsing.rs  calculus.rs  check_sizes.rs  derivative_education_test.rs  dispatch_integration.rs  division_error_tests.rs  domain_error_tests.rs  e2e.rs  educational.rs  educational_noncommutative_error_tests.rs  educational_noncommutative_messages_tests.rs  educational_noncommutative_steps_tests.rs  equation_solver_education_test.rs  errors.rs  factoring_steps.rs  function_education_test.rs  gcd_core.rs  gcd_debug.rs  gcd_symbolica_cases.rs  gcd_sympy_cases.rs  integral_registry_tests.rs  integration_comprehensive.rs  integration_education_test.rs  integration_educational.rs  integration_performance.rs  integration_rational_tests.rs  integration_risch_tests.rs  integration_risch_tests.rs.bak  integration_strategy_tests.rs  (+43 more)
crates/mathhook-node/: Cargo.toml  README.md  USAGE.md  bench_bindings.js  bench_bindings.ts  index-enhanced.d.ts  index.d.ts  index.js  mathhook-node.darwin-arm64.node  mathhook-node.node  package-lock.json  package.json  tsconfig.json
crates/mathhook-node/examples/: README.md  advanced-usage.ts  basic-usage.ts  fluent-api-test.ts  function-shortcuts-test.ts  package-lock.json  package.json  parse-test.ts  symbols-test.ts  tsconfig.json  typescript-enhanced-test.ts
crates/mathhook-node/scripts/: README.md  REFACTOR_SCRIPT_ANALYSIS.md  refactor_lib.py
crates/mathhook-node/src/: eval_context.rs  export_integration_test.rs  expression.rs  functions.rs  functions_generated.rs  lib.rs  types.rs
crates/mathhook-node/tests/: evaluate_with_context.test.js  integration.test.js  integration.test.ts  solvers.test.js  solvers.test.ts
crates/mathhook-parser/: Cargo.toml
crates/mathhook-parser/src/: lib.rs
crates/mathhook-parser/tests/: integration_parsing.rs  roundtrip_validation.rs  universal_parser_validation.rs
crates/mathhook-python/: Cargo.toml  README.md  USAGE.md  bench_bindings.py  pyproject.toml
crates/mathhook-python/examples/: README.md  advanced_usage.py  basic_usage.py  phase3_demo.py  requirements.txt
crates/mathhook-python/refactor-tool/: Cargo.toml  helpers.rs  lib.rs
crates/mathhook-python/src/: eval_context.rs  expression.rs  functions.rs  functions_generated.rs  helpers.rs  lib.rs  polyzp.rs  solver.rs  types.rs
crates/mathhook-python/tests/: test_display.py  test_evaluate_with_context.py  test_expressions.py  (+6 more)
docs/: Cargo.toml  INTEGRATION_GUIDE.md  README.md  RISCH_ALGORITHM.md  book.toml  noncommutative_api_reference.md  noncommutative_examples.md  parser_design_noncommutative.md  test.sh
docs/book/: 404.html  introduction.html  print.html  searchindex.js  toc.html  toc.js
docs/claudedocs/: TESTING_STRATEGY_REVIEW_2025-11-28_2359.md
docs/src/: SUMMARY.md  introduction.md
docs/src-lib/: lib.rs
(+1585 files in other folders)
