[package]
name = "mathhook"
version = "0.1.0"
edition = "2021"
description = "A high-performance educational computer algebra system"
license = "MIT"
repository = "https://github.com/ahmedmashhour/mathhook"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
regex = "1.5"
once_cell = "1.21.3"

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[[bench]]
name = "optimization_bench"
harness = false

[[bench]]
name = "symbolica_challenge_bench"
harness = false

[[bench]]
name = "solver_bench"
harness = false

[[bench]]
name = "gcd_bench"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = true
overflow-checks = false

[profile.bench]
lto = "fat"
codegen-units = 1
debug = true
overflow-checks = false
