[workspace]
resolver = "2"
members = [
    "crates/mathhook-core",
    "crates/mathhook-parser",
    "crates/mathhook-benchmarks",
    "crates/mathhook-python",
    "crates/mathhook-node",
    "crates/mathhook",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Ahmed Mashhour <ahmed@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ahmedmashour/mathhook"
homepage = "https://github.com/ahmedmashour/mathhook"

[workspace.dependencies]
# Core math dependencies
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.19"
regex = "1.10"
rayon = "1.8"
dirs = "5.0"

# Testing and benchmarking
criterion = { version = "0.7.0", features = ["html_reports"] }
proptest = "1.5"

# Binding dependencies
pyo3 = "0.26.0"
napi = "3.3.0"
napi-derive = "3.2.5"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = true
codegen-units = 1