[package]
name = "mathhook-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance benchmarks for MathHook ecosystem"

[dependencies]
mathhook-core = { path = "../mathhook-core" }
mathhook-parser = { path = "../mathhook-parser" }
criterion.workspace = true
num-bigint.workspace = true
num-rational.workspace = true
num-traits.workspace = true

[[bench]]
name = "core_performance"
harness = false

[[bench]]
name = "symbolica_challenge"
harness = false


[[bench]]
name = "realistic_cas_benchmarks"
harness = false

[[bench]]
name = "simd_performance_analysis"
harness = false

[[bench]]
name = "comprehensive_performance_suite"
harness = false

[[bench]]
name = "performance_consistency"
harness = false
