[package]
name = "mathhook-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance benchmarks for MathHook ecosystem"

[dependencies]
mathhook-core = { path = "../mathhook-core" }
criterion.workspace = true
num-rational.workspace = true
num-traits.workspace = true
rayon.workspace = true
num-bigint.workspace = true


[[bench]]
name = "core_performance"
harness = false

[[bench]]
name = "symbolica_challenge"
harness = false

[[bench]]
name = "mathhook_iq_test_suite"
harness = false
