[package]
name = "mathhook-benchmarks"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Performance benchmarks for MathHook ecosystem"

[dependencies]
mathhook-core = { path = "../mathhook-core" }
criterion.workspace = true
num-rational.workspace = true
num-traits.workspace = true
rayon.workspace = true
num-bigint.workspace = true


[[bench]]
name = "core_performance"
harness = false

[[bench]]
name = "realistic_cas_benchmarks"
harness = false

[[bench]]
name = "comprehensive_performance_suite"
harness = false

[[bench]]
name = "performance_consistency"
harness = false

[[bench]]
name = "simd_performance_analysis"
harness = false

# Wave 2: Comprehensive Core Functionality Benchmarks (NEW)

[[bench]]
name = "calculus_benchmarks"
harness = false

[[bench]]
name = "solving_benchmarks"
harness = false

[[bench]]
name = "simplification_benchmarks"
harness = false

[[bench]]
name = "function_evaluation_benchmarks"
harness = false

[[bench]]
name = "educational_benchmarks"
harness = false

[[bench]]
name = "parsing_benchmarks"
harness = false
