[package]
name = "mathhook-python"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Python bindings for MathHook mathematical engine"
publish = false  # Published to PyPI via maturin, not crates.io

[lib]
name = "mathhook_python"
crate-type = ["cdylib"]

[dependencies]
mathhook-core = { path = "../mathhook-core", features = ["python-bindings"] }
mathhook-macros = { path = "../mathhook-macros", features = ["python-bindings"] }
pyo3 = { workspace = true, features = ["extension-module"] }
serde.workspace = true
serde_json.workspace = true

[features]
default = ["python-bindings"]
python-bindings = []

[build-dependencies]
pyo3-build-config = "0.26"
