[package]
name = "refactor-tool"
version = "0.1.0"
edition = "2021"

[workspace]
# This is a standalone tool, not part of the main workspace

[[bin]]
name = "refactor"
path = "src/main.rs"

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits", "parsing"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
